# apps/api/src/sponsors/sponsors.module.ts
@@ -1,0 +1,12 @@
+import { Module } from '@nestjs/common';
+import { SponsorsService } from './sponsors.service';
+import { SponsorsController } from './sponsors.controller';
+import { PrismaModule } from '../prisma/prisma.module';
+
+@Module({
+  imports: [PrismaModule],
+  controllers: [SponsorsController],
+  providers: [SponsorsService],
+  exports: [SponsorsService],
+})
+export class SponsorsModule {}
